feat: implement jpa entities