@@ -5,30 +5,32 @@ import com.miracle.smart_ecommerce_jpa.domain.order.entity.CustomerOrder;
 import com.miracle.smart_ecommerce_jpa.domain.order.entity.CustomerOrder.OrderStatus;
 import com.miracle.smart_ecommerce_jpa.domain.order.entity.CustomerOrder.PaymentStatus;
 import com.miracle.smart_ecommerce_jpa.domain.order.entity.OrderItem;
+import com.miracle.smart_ecommerce_jpa.domain.order.entity.ShippingMethod;
 import com.miracle.smart_ecommerce_jpa.domain.order.repository.OrderItemRepository;
 import com.miracle.smart_ecommerce_jpa.domain.order.repository.OrderRepository;
 import com.miracle.smart_ecommerce_jpa.domain.order.repository.ShippingMethodRepository;
 import com.miracle.smart_ecommerce_jpa.domain.product.entity.Product;
 import com.miracle.smart_ecommerce_jpa.domain.product.repository.ProductRepository;
-import com.miracle.smart_ecommerce_jpa.domain.user.entity.User;
 import com.miracle.smart_ecommerce_jpa.domain.order.dto.CreateOrderRequest;
 import com.miracle.smart_ecommerce_jpa.domain.order.dto.OrderResponse;
 import com.miracle.smart_ecommerce_jpa.domain.order.dto.UpdateOrderRequest;
 import com.miracle.smart_ecommerce_jpa.domain.user.repository.UserRepository;
-import com.miracle.smart_ecommerce_jpa.exception.ResourceNotFoundException;
 import com.miracle.smart_ecommerce_jpa.exception.BadRequestException;
-import com.miracle.smart_ecommerce_jpa.domain.order.entity.ShippingMethod;
+import com.miracle.smart_ecommerce_jpa.exception.ResourceNotFoundException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.cache.Cache;
-import org.springframework.cache.CacheManager;
+import org.springframework.cache.annotation.CacheEvict;
 import org.springframework.cache.annotation.Cacheable;
+import org.springframework.dao.DataIntegrityViolationException;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
@@ -36,7 +38,24 @@ import java.util.stream.Collectors;
 import static com.miracle.smart_ecommerce_jpa.config.CacheConfig.*;
 
 /**
- * Implementation of OrderService.
+ * Implementation of OrderService using Spring Data JPA.
+ *
+ * Transaction strategy:
+ * - createOrder uses REQUIRED propagation to ensure all inserts and stock updates
+ *   are atomic — a failure in any step rolls back the entire order
+ * - cancelOrder restores stock within the same transaction
+ * - updateOrder recalculates totals and persists item changes atomically
+ * - Read operations use readOnly = true for performance
+ *
+ * Cache strategy:
+ * - Individual orders cached by ID and order number
+ * - All order cache entries evicted on any write to prevent stale listings
+ *
+ * Exception strategy:
+ * - ResourceNotFoundException for missing entities
+ * - BadRequestException for invalid state transitions or cancellation rules
+ * - IllegalArgumentException for invalid input (e.g. insufficient stock)
+ * - DataIntegrityViolationException caught as safety net for DB constraint violations
  */
 @Service
 @RequiredArgsConstructor
@@ -48,108 +67,99 @@ public class OrderServiceImpl implements OrderService {
     private final UserRepository userRepository;
     private final ProductRepository productRepository;
     private final ShippingMethodRepository shippingMethodRepository;
-    private final CacheManager cacheManager;
 
+    /**
+     * Create a new order.
+     * Validates user, products, and stock before saving.
+     * Deducts stock for each product atomically within the same transaction.
+     * Rolls back entirely if any product is out of stock or not found.
+     */
     @Override
     @Transactional
+    @CacheEvict(value = ORDERS_CACHE, allEntries = true)
     public OrderResponse createOrder(CreateOrderRequest request) {
         log.info("Creating order for user: {}", request.getUserId());
 
-        // Verify user exists
-        User user = userRepository.findById(request.getUserId())
-                .orElseThrow(() -> ResourceNotFoundException.forResource("User", request.getUserId()));
+        if (!userRepository.existsById(request.getUserId())) {
+            throw ResourceNotFoundException.forResource("User", request.getUserId());
+        }
 
-        // Generate order number
-        String orderNumber = CustomerOrder.generateOrderNumber();
-
-        // Calculate order totals from items
-        BigDecimal subtotal = BigDecimal.ZERO;
+        // Resolve and validate all products upfront to fail fast before any DB writes
         List<OrderItem> orderItems = new ArrayList<>();
+        BigDecimal subtotal = BigDecimal.ZERO;
 
         for (CreateOrderRequest.OrderItemRequest itemRequest : request.getItems()) {
             Product product = productRepository.findById(itemRequest.getProductId())
                     .orElseThrow(() -> ResourceNotFoundException.forResource("Product", itemRequest.getProductId()));
 
-            // Validate stock
-            if (product.getStockQuantity() < itemRequest.getQuantity()) {
-                throw new IllegalArgumentException("Insufficient stock for product: " + product.getName());
+            if (!product.canBeOrdered(itemRequest.getQuantity())) {
+                throw new IllegalArgumentException(
+                        "Insufficient stock for product: " + product.getName() +
+                                ". Available: " + product.getStockQuantity() +
+                                ", Requested: " + itemRequest.getQuantity());
             }
 
-            BigDecimal unitPrice = product.getPrice();
-            BigDecimal totalPrice = unitPrice.multiply(BigDecimal.valueOf(itemRequest.getQuantity()));
-            subtotal = subtotal.add(totalPrice);
-
-            OrderItem orderItem = OrderItem.builder()
-                    .productId(itemRequest.getProductId())
-                    .unitPrice(unitPrice)
-                    .quantity(itemRequest.getQuantity())
-                    .build();
-
-            orderItems.add(orderItem);
+            OrderItem item = OrderItem.fromProduct(product, itemRequest.getQuantity());
+            orderItems.add(item);
+            subtotal = subtotal.add(item.getTotalPrice());
         }
 
-        // Fetch shipping method if provided
-        ShippingMethod shippingMethod = null;
+        // Resolve shipping cost
         BigDecimal shippingCost = BigDecimal.ZERO;
         if (request.getShippingMethodId() != null) {
-            shippingMethod = shippingMethodRepository.findById(request.getShippingMethodId())
+            ShippingMethod shippingMethod = shippingMethodRepository.findById(request.getShippingMethodId())
                     .orElseThrow(() -> ResourceNotFoundException.forResource("ShippingMethod", request.getShippingMethodId()));
             shippingCost = shippingMethod.getPrice() != null ? shippingMethod.getPrice() : BigDecimal.ZERO;
         }
 
-        // Total equals subtotal + shipping cost
         BigDecimal total = subtotal.add(shippingCost);
 
-        // Create order
-        CustomerOrder order = CustomerOrder.builder()
-                .userId(request.getUserId())
-                .orderNumber(orderNumber)
-                .status(OrderStatus.PENDING.name().toLowerCase())
-                .paymentStatus(PaymentStatus.PENDING.name().toLowerCase())
-                .paymentMethodId(request.getPaymentMethodId())
-                .shippingMethodId(request.getShippingMethodId())
-                .subtotal(subtotal)
-                .total(total)
-                .build();
+        try {
+            // Save order
+            CustomerOrder order = CustomerOrder.builder()
+                    .userId(request.getUserId())
+                    .orderNumber(CustomerOrder.generateOrderNumber())
+                    .status(OrderStatus.PENDING.name().toLowerCase())
+                    .paymentStatus(PaymentStatus.PENDING.name().toLowerCase())
+                    .paymentMethodId(request.getPaymentMethodId())
+                    .shippingMethodId(request.getShippingMethodId())
+                    .subtotal(subtotal)
+                    .total(total)
+                    .build();
 
-        CustomerOrder savedOrder = orderRepository.save(order);
-        log.info("Order created with ID: {} and order number: {}", savedOrder.getId(), orderNumber);
+            CustomerOrder saved = orderRepository.save(order);
 
-        // Save order items
-        for (OrderItem item : orderItems) {
-            item.setOrderId(savedOrder.getId());
-            orderItemRepository.save(item);
+            // Save order items and deduct stock
+            for (int i = 0; i < orderItems.size(); i++) {
+                OrderItem item = orderItems.get(i);
+                CreateOrderRequest.OrderItemRequest itemRequest = request.getItems().get(i);
+
+                item.setOrderId(saved.getId());
+                orderItemRepository.save(item);
+
+                // Deduct stock: fetch current stock and subtract quantity
+                Product product = productRepository.findById(item.getProductId())
+                        .orElseThrow(() -> ResourceNotFoundException.forResource("Product", item.getProductId()));
+                int newStock = product.getStockQuantity() - itemRequest.getQuantity();
+                productRepository.updateStock(item.getProductId(), newStock);
+            }
+
+            log.info("Order created with ID: {} and number: {}", saved.getId(), saved.getOrderNumber());
+
+            // Load items for response
+            saved.setOrderItems(orderItemRepository.findByOrderId(saved.getId()));
+            return mapToResponse(saved);
+
+        } catch (DataIntegrityViolationException e) {
+            log.error("Data integrity violation while creating order for user: {}", request.getUserId(), e);
+            throw new DataIntegrityViolationException("Failed to create order due to a data constraint violation: " + e.getMessage());
         }
-
-        // Update product stock
-        for (CreateOrderRequest.OrderItemRequest itemRequest : request.getItems()) {
-            productRepository.updateStock(itemRequest.getProductId(), -itemRequest.getQuantity());
-        }
-
-        // Load items for response
-        savedOrder.setOrderItems(orderItemRepository.findByOrderId(savedOrder.getId()));
-        savedOrder.setUser(user);
-        savedOrder.setShippingMethod(shippingMethod);
-
-        OrderResponse response = mapToResponse(savedOrder);
-
-        // Update caches with new order
-        Cache byIdCache = cacheManager.getCache(ORDERS_CACHE);
-        if (byIdCache != null) {
-            byIdCache.put("id:" + savedOrder.getId(), response);
-        }
-
-        Cache byNumberCache = cacheManager.getCache(ORDERS_CACHE);
-        if (byNumberCache != null) {
-            byNumberCache.put("number:" + savedOrder.getOrderNumber(), response);
-        }
-
-        // Clear list cache
-        evictCache(ORDERS_CACHE);
-
-        return response;
     }
 
+    /**
+     * Get order by ID.
+     * Result cached by ID.
+     */
     @Override
     @Transactional(readOnly = true)
     @Cacheable(value = ORDERS_CACHE, key = "'id:' + #id")
@@ -160,8 +170,13 @@ public class OrderServiceImpl implements OrderService {
         return mapToResponseWithDetails(order);
     }
 
+    /**
+     * Get order by order number.
+     * Result cached by order number.
+     */
     @Override
     @Transactional(readOnly = true)
+    @Cacheable(value = ORDERS_CACHE, key = "'number:' + #orderNumber")
     public OrderResponse getOrderByOrderNumber(String orderNumber) {
         log.debug("Getting order by order number: {}", orderNumber);
         CustomerOrder order = orderRepository.findByOrderNumber(orderNumber)
@@ -169,224 +184,327 @@ public class OrderServiceImpl implements OrderService {
         return mapToResponseWithDetails(order);
     }
 
+    /**
+     * Get all orders with pagination.
+     */
     @Override
     @Transactional(readOnly = true)
-    public PageResponse<OrderResponse> getAllOrders(int page, int size) {
-        log.debug("Getting all orders - page: {}, size: {}", page, size);
-        List<CustomerOrder> orders = orderRepository.findAll(page, size);
-        long total = orderRepository.count();
+    public PageResponse<OrderResponse> getAllOrders(Pageable pageable) {
+        log.debug("Getting all orders - pageable: {}", pageable);
 
-        List<OrderResponse> responses = orders.stream()
+        Page<CustomerOrder> orderPage = orderRepository.findAll(pageable);
+        List<OrderResponse> responses = orderPage.getContent().stream()
                 .map(this::mapToResponseWithDetails)
-                .collect(Collectors.toList());
+                .toList();
 
-        return PageResponse.of(responses, page, size, total);
+        return PageResponse.of(responses, pageable.getPageNumber(), pageable.getPageSize(), orderPage.getTotalElements());
     }
 
+    /**
+     * Get orders by user ID with pagination.
+     * Validates user existence before querying.
+     */
     @Override
     @Transactional(readOnly = true)
-    public PageResponse<OrderResponse> getOrdersByUserId(UUID userId, int page, int size) {
-        log.debug("Getting orders for user: {} - page: {}, size: {}", userId, page, size);
-        List<CustomerOrder> orders = orderRepository.findByUserId(userId, page, size);
-        long total = orderRepository.countByUserId(userId);
+    public PageResponse<OrderResponse> getOrdersByUserId(UUID userId, Pageable pageable) {
+        log.debug("Getting orders for user: {}", userId);
 
-        List<OrderResponse> responses = orders.stream()
+        if (!userRepository.existsById(userId)) {
+            throw ResourceNotFoundException.forResource("User", userId);
+        }
+
+        Page<CustomerOrder> orderPage = orderRepository.findByUserId(userId, pageable);
+        List<OrderResponse> responses = orderPage.getContent().stream()
                 .map(this::mapToResponseWithDetails)
-                .collect(Collectors.toList());
+                .toList();
 
-        return PageResponse.of(responses, page, size, total);
+        return PageResponse.of(responses, pageable.getPageNumber(), pageable.getPageSize(), orderPage.getTotalElements());
     }
 
+    /**
+     * Get orders by status with pagination.
+     */
     @Override
     @Transactional(readOnly = true)
-    public PageResponse<OrderResponse> getOrdersByStatus(String status, int page, int size) {
-        log.debug("Getting orders by status: {} - page: {}, size: {}", status, page, size);
-        List<CustomerOrder> orders = orderRepository.findByStatus(status.toLowerCase(), page, size);
-        long total = orderRepository.countByStatus(status.toLowerCase());
+    public PageResponse<OrderResponse> getOrdersByStatus(String status, Pageable pageable) {
+        log.debug("Getting orders by status: {}", status);
 
-        List<OrderResponse> responses = orders.stream()
+        Page<CustomerOrder> orderPage = orderRepository.findByStatus(status.toLowerCase(), pageable);
+        List<OrderResponse> responses = orderPage.getContent().stream()
                 .map(this::mapToResponseWithDetails)
-                .collect(Collectors.toList());
+                .toList();
 
-        return PageResponse.of(responses, page, size, total);
+        return PageResponse.of(responses, pageable.getPageNumber(), pageable.getPageSize(), orderPage.getTotalElements());
     }
 
+    /**
+     * Update the status of an order.
+     * Validates status transitions before applying.
+     * All cache entries evicted after update.
+     */
     @Override
     @Transactional
+    @CacheEvict(value = ORDERS_CACHE, allEntries = true)
     public OrderResponse updateOrderStatus(UUID id, String status) {
         log.info("Updating order status: {} to {}", id, status);
 
         CustomerOrder order = orderRepository.findById(id)
                 .orElseThrow(() -> ResourceNotFoundException.forResource("Order", id));
 
-        String orderNumber = order.getOrderNumber();
-
-        // Special-case cancellation: only allow when order.canBeCancelled()
         if ("cancelled".equalsIgnoreCase(status)) {
             if (!order.canBeCancelled()) {
                 throw new BadRequestException("Order cannot be cancelled. Current status: " + order.getStatus());
             }
         } else {
-            // Validate status transition for other statuses
             validateStatusTransition(order.getStatus(), status);
         }
 
         orderRepository.updateStatus(id, status.toLowerCase());
+        log.info("Order status updated successfully: {} -> {}", id, status);
 
-        // Refresh order
-        order = orderRepository.findById(id)
+        CustomerOrder updated = orderRepository.findById(id)
                 .orElseThrow(() -> ResourceNotFoundException.forResource("Order", id));
-
-        log.info("Order status updated successfully: {}", id);
-        OrderResponse response = mapToResponseWithDetails(order);
-
-        // Update caches
-        Cache byIdCache = cacheManager.getCache(ORDERS_CACHE);
-        if (byIdCache != null) {
-            byIdCache.put("id:" + id, response);
-        }
-
-        Cache byNumberCache = cacheManager.getCache(ORDERS_CACHE);
-        if (byNumberCache != null && orderNumber != null) {
-            byNumberCache.put("number:" + orderNumber, response);
-        }
-
-        // Clear list cache
-        evictCache(ORDERS_CACHE);
-
-        return response;
+        return mapToResponseWithDetails(updated);
     }
 
+    /**
+     * Update the payment status of an order.
+     * Automatically confirms order if payment is marked as paid.
+     * All cache entries evicted after update.
+     */
     @Override
     @Transactional
+    @CacheEvict(value = ORDERS_CACHE, allEntries = true)
     public OrderResponse updatePaymentStatus(UUID id, String paymentStatus) {
         log.info("Updating payment status for order: {} to {}", id, paymentStatus);
 
         CustomerOrder order = orderRepository.findById(id)
                 .orElseThrow(() -> ResourceNotFoundException.forResource("Order", id));
 
-        String orderNumber = order.getOrderNumber();
-
         orderRepository.updatePaymentStatus(id, paymentStatus.toLowerCase());
 
-        // If payment is successful, update order status to confirmed
+        // Auto-confirm order when payment is received
         if ("paid".equalsIgnoreCase(paymentStatus) &&
-            OrderStatus.PENDING.name().equalsIgnoreCase(order.getStatus())) {
+                OrderStatus.PENDING.name().equalsIgnoreCase(order.getStatus())) {
             orderRepository.updateStatus(id, OrderStatus.CONFIRMED.name().toLowerCase());
         }
 
-        // Refresh order
-        order = orderRepository.findById(id)
+        log.info("Payment status updated for order: {}", id);
+
+        CustomerOrder updated = orderRepository.findById(id)
                 .orElseThrow(() -> ResourceNotFoundException.forResource("Order", id));
-
-        log.info("Payment status updated successfully for order: {}", id);
-        OrderResponse response = mapToResponseWithDetails(order);
-
-        // Update caches
-        Cache byIdCache = cacheManager.getCache(ORDERS_CACHE);
-        if (byIdCache != null) {
-            byIdCache.put("id:" + id, response);
-        }
-
-        Cache byNumberCache = cacheManager.getCache(ORDERS_CACHE);
-        if (byNumberCache != null && orderNumber != null) {
-            byNumberCache.put("number:" + orderNumber, response);
-        }
-
-        // Clear list cache
-        evictCache(ORDERS_CACHE);
-
-        return response;
+        return mapToResponseWithDetails(updated);
     }
 
+    /**
+     * Cancel an order and restore product stock.
+     * Only cancellable orders (PENDING, CONFIRMED, PROCESSING) can be cancelled.
+     * Stock restoration and status update are atomic within the same transaction.
+     */
     @Override
     @Transactional
+    @CacheEvict(value = ORDERS_CACHE, allEntries = true)
     public OrderResponse cancelOrder(UUID id) {
         log.info("Cancelling order: {}", id);
 
         CustomerOrder order = orderRepository.findById(id)
                 .orElseThrow(() -> ResourceNotFoundException.forResource("Order", id));
 
-        String orderNumber = order.getOrderNumber();
-
-        // Check if order can be cancelled
         if (!order.canBeCancelled()) {
             throw new BadRequestException("Order cannot be cancelled. Current status: " + order.getStatus());
         }
 
-        // Update status to cancelled
         orderRepository.updateStatus(id, OrderStatus.CANCELLED.name().toLowerCase());
 
-        // Restore product stock
+        // Restore product stock atomically within the same transaction
         List<OrderItem> items = orderItemRepository.findByOrderId(id);
         for (OrderItem item : items) {
-            productRepository.updateStock(item.getProductId(), item.getQuantity());
-            // Evict product caches for updated stock
-            Cache productCache = cacheManager.getCache(PRODUCTS_CACHE);
-            if (productCache != null) {
-                productCache.evict("id:" + item.getProductId());
-            }
+            Product product = productRepository.findById(item.getProductId())
+                    .orElseThrow(() -> ResourceNotFoundException.forResource("Product", item.getProductId()));
+            int restoredStock = product.getStockQuantity() + item.getQuantity();
+            productRepository.updateStock(item.getProductId(), restoredStock);
         }
 
-        // Refresh order
-        order = orderRepository.findById(id)
+        log.info("Order cancelled and stock restored for order: {}", id);
+
+        CustomerOrder updated = orderRepository.findById(id)
                 .orElseThrow(() -> ResourceNotFoundException.forResource("Order", id));
-
-        log.info("Order cancelled successfully: {}", id);
-        OrderResponse response = mapToResponseWithDetails(order);
-
-        // Update order caches
-        Cache byIdCache = cacheManager.getCache(ORDERS_CACHE);
-        if (byIdCache != null) {
-            byIdCache.put("id:" + id, response);
-        }
-
-        Cache byNumberCache = cacheManager.getCache(ORDERS_CACHE);
-        if (byNumberCache != null && orderNumber != null) {
-            byNumberCache.put("number:" + orderNumber, response);
-        }
-
-        return response;
+        return mapToResponseWithDetails(updated);
     }
 
+    /**
+     * Update editable fields of an order (payment method, shipping method, items).
+     * Recalculates subtotal and total after item changes.
+     * Stock is adjusted for quantity changes and new/removed items.
+     * All changes are atomic within the same transaction.
+     */
     @Override
     @Transactional
-    public void deleteOrder(UUID id) {
-        log.info("Deleting order: {}", id);
+    @CacheEvict(value = ORDERS_CACHE, allEntries = true)
+    public OrderResponse updateOrder(UUID id, UpdateOrderRequest request) {
+        log.info("Updating order: {}", id);
 
         CustomerOrder order = orderRepository.findById(id)
                 .orElseThrow(() -> ResourceNotFoundException.forResource("Order", id));
 
-        String orderNumber = order.getOrderNumber();
+        boolean changed = false;
 
-        // Delete order items first
-        orderItemRepository.deleteByOrderId(id);
-
-        // Delete order
-        orderRepository.deleteById(id);
-        log.info("Order deleted successfully: {}", id);
-
-        // Evict from id and number caches
-        Cache byIdCache = cacheManager.getCache(ORDERS_CACHE);
-        if (byIdCache != null) {
-            byIdCache.evict("id:" + id);
+        if (request.getPaymentMethodId() != null &&
+                !request.getPaymentMethodId().equals(order.getPaymentMethodId())) {
+            order.setPaymentMethodId(request.getPaymentMethodId());
+            changed = true;
         }
 
-        Cache byNumberCache = cacheManager.getCache(ORDERS_CACHE);
-        if (byNumberCache != null && orderNumber != null) {
-            byNumberCache.evict("number:" + orderNumber);
+        if (request.getShippingMethodId() != null &&
+                !request.getShippingMethodId().equals(order.getShippingMethodId())) {
+            if (!shippingMethodRepository.existsById(request.getShippingMethodId())) {
+                throw ResourceNotFoundException.forResource("ShippingMethod", request.getShippingMethodId());
+            }
+            order.setShippingMethodId(request.getShippingMethodId());
+            changed = true;
         }
 
-        // Clear list cache
-        evictCache(ORDERS_CACHE);
+        if (request.getItems() != null) {
+            List<OrderItem> existingItems = orderItemRepository.findByOrderId(id);
+            Map<UUID, OrderItem> existingById = existingItems.stream()
+                    .filter(it -> it.getId() != null)
+                    .collect(Collectors.toMap(OrderItem::getId, it -> it));
+
+            List<OrderItem> resultingItems = new ArrayList<>();
+            Map<UUID, Integer> stockDeltas = new java.util.HashMap<>();
+
+            for (UpdateOrderRequest.OrderItemUpdateRequest itemReq : request.getItems()) {
+                if (itemReq.getId() != null && existingById.containsKey(itemReq.getId())) {
+                    OrderItem existing = existingById.get(itemReq.getId());
+
+                    if (itemReq.getQuantity() == null || itemReq.getQuantity() <= 0) {
+                        // Remove item — restore its stock
+                        stockDeltas.merge(existing.getProductId(), existing.getQuantity(), Integer::sum);
+                        changed = true;
+                        continue;
+                    }
+
+                    if (!existing.getQuantity().equals(itemReq.getQuantity())) {
+                        int qtyDiff = itemReq.getQuantity() - existing.getQuantity();
+                        stockDeltas.merge(existing.getProductId(), -qtyDiff, Integer::sum);
+                        existing.setQuantity(itemReq.getQuantity());
+                        changed = true;
+                    }
+                    resultingItems.add(existing);
+
+                } else if (itemReq.getProductId() != null &&
+                        itemReq.getQuantity() != null &&
+                        itemReq.getQuantity() > 0) {
+                    // New item
+                    Product product = productRepository.findById(itemReq.getProductId())
+                            .orElseThrow(() -> ResourceNotFoundException.forResource("Product", itemReq.getProductId()));
+
+                    if (product.getStockQuantity() < itemReq.getQuantity()) {
+                        throw new IllegalArgumentException(
+                                "Insufficient stock for product: " + product.getName() +
+                                        ". Available: " + product.getStockQuantity());
+                    }
+
+                    OrderItem newItem = OrderItem.fromProduct(product, itemReq.getQuantity());
+                    newItem.setOrderId(id);
+                    resultingItems.add(newItem);
+                    stockDeltas.merge(product.getId(), -itemReq.getQuantity(), Integer::sum);
+                    changed = true;
+                }
+            }
+
+            if (changed) {
+                // Apply stock deltas using absolute values
+                for (Map.Entry<UUID, Integer> entry : stockDeltas.entrySet()) {
+                    if (entry.getValue() == 0) continue;
+                    Product product = productRepository.findById(entry.getKey())
+                            .orElseThrow(() -> ResourceNotFoundException.forResource("Product", entry.getKey()));
+                    int newStock = product.getStockQuantity() + entry.getValue();
+                    if (newStock < 0) {
+                        throw new IllegalArgumentException("Stock would go negative for product: " + product.getName());
+                    }
+                    productRepository.updateStock(entry.getKey(), newStock);
+                }
+
+                // Persist items: delete all and re-insert
+                orderItemRepository.deleteByOrderId(id);
+                for (OrderItem item : resultingItems) {
+                    item.setOrderId(id);
+                    orderItemRepository.save(item);
+                }
+
+                order.setOrderItems(resultingItems);
+
+                // Recalculate subtotal
+                BigDecimal newSubtotal = resultingItems.stream()
+                        .map(OrderItem::getTotalPrice)
+                        .reduce(BigDecimal.ZERO, BigDecimal::add);
+                order.setSubtotal(newSubtotal);
+
+                // Recalculate total with shipping
+                BigDecimal shippingCost = BigDecimal.ZERO;
+                UUID shippingId = order.getShippingMethodId();
+                if (shippingId != null) {
+                    shippingMethodRepository.findById(shippingId).ifPresent(sm -> {
+                        // handled below
+                    });
+                    ShippingMethod sm = shippingMethodRepository.findById(shippingId).orElse(null);
+                    if (sm != null && sm.getPrice() != null) {
+                        shippingCost = sm.getPrice();
+                    }
+                }
+                order.setTotal(newSubtotal.add(shippingCost));
+            }
+        }
+
+        if (!changed) {
+            log.debug("No changes detected for order: {}", id);
+            return mapToResponseWithDetails(order);
+        }
+
+        log.info("Order updated successfully: {}", id);
+
+        // JPA dirty checking persists field changes; re-fetch for clean state
+        CustomerOrder updated = orderRepository.findById(id)
+                .orElseThrow(() -> ResourceNotFoundException.forResource("Order", id));
+        return mapToResponseWithDetails(updated);
     }
 
+    /**
+     * Delete an order.
+     * CascadeType.ALL on orderItems means items are deleted automatically.
+     */
+    @Override
+    @Transactional
+    @CacheEvict(value = ORDERS_CACHE, allEntries = true)
+    public void deleteOrder(UUID id) {
+        log.info("Deleting order: {}", id);
+
+        if (!orderRepository.existsById(id)) {
+            throw ResourceNotFoundException.forResource("Order", id);
+        }
+
+        try {
+            orderRepository.deleteById(id);
+            log.info("Order deleted successfully: {}", id);
+        } catch (DataIntegrityViolationException e) {
+            log.error("Data integrity violation while deleting order: {}", id, e);
+            throw new DataIntegrityViolationException("Cannot delete order due to a data constraint violation: " + e.getMessage());
+        }
+    }
+
+    /**
+     * Count total orders.
+     */
     @Override
     @Transactional(readOnly = true)
     public long countOrders() {
         return orderRepository.count();
     }
 
+    /**
+     * Count orders by status.
+     */
     @Override
     @Transactional(readOnly = true)
     public long countOrdersByStatus(String status) {
@@ -401,7 +519,6 @@ public class OrderServiceImpl implements OrderService {
         return OrderResponse.builder()
                 .id(order.getId())
                 .userId(order.getUserId())
-                .customerName(order.getUser() != null ? order.getUser().getFullName() : null)
                 .orderNumber(order.getOrderNumber())
                 .status(order.getStatus())
                 .paymentStatus(order.getPaymentStatus())
@@ -412,35 +529,36 @@ public class OrderServiceImpl implements OrderService {
                 .itemCount(order.getItemCount())
                 .createdAt(order.getCreatedAt())
                 .items(mapOrderItems(order.getOrderItems()))
-                .shippingMethod(mapShippingMethod(order.getShippingMethod()))
                 .build();
     }
 
+    /**
+     * Loads order items for the response.
+     * Products are batch-fetched by collecting IDs first to avoid N+1 queries.
+     */
     private OrderResponse mapToResponseWithDetails(CustomerOrder order) {
-        // Load order items
         List<OrderItem> items = orderItemRepository.findByOrderId(order.getId());
         order.setOrderItems(items);
-
-        // Load user
-        userRepository.findById(order.getUserId()).ifPresent(order::setUser);
-
-        // Load shipping method
-        if (order.getShippingMethodId() != null) {
-            // shipping method loader not implemented fully; keep transient if available
-            // shipping method may be loaded elsewhere
-        }
-
         return mapToResponse(order);
     }
 
+    /**
+     * Maps order items to response DTOs.
+     * Batch-fetches all products by ID to avoid N+1 queries.
+     */
     private List<OrderResponse.OrderItemResponse> mapOrderItems(List<OrderItem> items) {
         if (items == null || items.isEmpty()) {
             return new ArrayList<>();
         }
+
+        // Batch fetch all products to avoid N+1
+        List<UUID> productIds = items.stream().map(OrderItem::getProductId).toList();
+        Map<UUID, Product> productMap = productRepository.findAllById(productIds).stream()
+                .collect(Collectors.toMap(Product::getId, p -> p));
+
         return items.stream()
                 .map(item -> {
-                    // Fetch product details for name/sku
-                    Product product = productRepository.findById(item.getProductId()).orElse(null);
+                    Product product = productMap.get(item.getProductId());
                     return OrderResponse.OrderItemResponse.builder()
                             .id(item.getId())
                             .productId(item.getProductId())
@@ -450,21 +568,10 @@ public class OrderServiceImpl implements OrderService {
                             .totalPrice(item.getTotalPrice())
                             .build();
                 })
-                .collect(Collectors.toList());
-    }
-
-    private OrderResponse.ShippingMethodResponse mapShippingMethod(com.miracle.smart_ecommerce_jpa.domain.order.entity.ShippingMethod shippingMethod) {
-        if (shippingMethod == null) return null;
-        return OrderResponse.ShippingMethodResponse.builder()
-                .id(shippingMethod.getId())
-                .name(shippingMethod.getName())
-                .price(shippingMethod.getPrice())
-                .estimatedDelivery(shippingMethod.getEstimatedDays() != null ? shippingMethod.getEstimatedDays() + " days" : null)
-                .build();
+                .toList();
     }
 
     private void validateStatusTransition(String currentStatus, String newStatus) {
-        // Basic validation
         if (currentStatus == null || newStatus == null) {
             throw new BadRequestException("Status values must not be null");
         }
@@ -472,213 +579,27 @@ public class OrderServiceImpl implements OrderService {
         String current = currentStatus.toLowerCase();
         String next = newStatus.toLowerCase();
 
-        if (current.equals(next)) {
-            return; // No change
-        }
+        if (current.equals(next)) return;
 
-        // Allowed statuses
-        Set<String> allowed = Set.of("pending", "confirmed", "processing", "shipped", "delivered", "cancelled");
+        Set<String> allowed = Set.of("pending", "confirmed", "processing", "shipped",
+                "out_for_delivery", "delivered", "cancelled", "refunded", "failed");
         if (!allowed.contains(next)) {
-            throw new BadRequestException("Unknown target status: " + newStatus + ". Allowed: " + String.join(", ", allowed));
+            throw new BadRequestException("Unknown target status: " + newStatus);
         }
 
-        // Terminal states cannot transition to anything else
-        Set<String> terminal = Set.of("delivered", "cancelled");
+        Set<String> terminal = Set.of("delivered", "cancelled", "refunded", "failed");
         if (terminal.contains(current)) {
-            throw new BadRequestException(String.format("Invalid status transition from '%s' to '%s'", currentStatus, newStatus));
+            throw new BadRequestException(
+                    String.format("Cannot transition from terminal status '%s' to '%s'", currentStatus, newStatus));
         }
 
-        // If target is 'delivered', require current be 'shipped'
-        if ("delivered".equals(next)) {
-            if (!"shipped".equals(current)) {
-                throw new BadRequestException(String.format("Invalid status transition from '%s' to '%s'", currentStatus, newStatus));
-            }
-            return;
+        if ("delivered".equals(next) && !"shipped".equals(current) && !"out_for_delivery".equals(current)) {
+            throw new BadRequestException(
+                    String.format("Cannot transition from '%s' to 'delivered'", currentStatus));
         }
 
-        // If target is 'cancelled' we expect caller to have validated canBeCancelled; reject here to be safe
         if ("cancelled".equals(next)) {
-            throw new BadRequestException("Cancellation must be validated via order.canBeCancelled()");
+            throw new BadRequestException("Use cancelOrder() to cancel an order");
         }
-
-        // For non-terminal targets (pending, confirmed, processing, shipped) allow transition from any non-terminal current state
-        // This lets admins move orders among progress statuses
-        return;
-    }
-
-    /**
-     * Helper method to evict all entries from a cache
-     */
-    private void evictCache(String cacheName) {
-        Cache cache = cacheManager.getCache(cacheName);
-        if (cache != null) {
-            cache.clear();
-        }
-    }
-
-    @Override
-    @Transactional
-    public OrderResponse updateOrder(UUID id, UpdateOrderRequest request) {
-        log.info("Updating order {} with request: {}", id, request);
-
-        CustomerOrder order = orderRepository.findById(id)
-                .orElseThrow(() -> ResourceNotFoundException.forResource("Order", id));
-
-        boolean changed = false;
-        String orderNumber = order.getOrderNumber();
-
-        if (request.getPaymentMethodId() != null && !request.getPaymentMethodId().equals(order.getPaymentMethodId())) {
-            order.setPaymentMethodId(request.getPaymentMethodId());
-            changed = true;
-        }
-        if (request.getShippingMethodId() != null && !request.getShippingMethodId().equals(order.getShippingMethodId())) {
-            order.setShippingMethodId(request.getShippingMethodId());
-            changed = true;
-        }
-
-        // Process item updates if provided
-        if (request.getItems() != null) {
-            // Load existing items
-            List<OrderItem> existingItems = orderItemRepository.findByOrderId(id);
-
-            // Map existing items by id for quick lookup
-            java.util.Map<java.util.UUID, OrderItem> existingById = existingItems.stream()
-                    .filter(it -> it.getId() != null)
-                    .collect(Collectors.toMap(OrderItem::getId, it -> it));
-
-            List<OrderItem> resultingItems = new ArrayList<>();
-
-            java.util.Map<UUID, Integer> stockDeltas = new java.util.HashMap<>();
-
-            for (UpdateOrderRequest.OrderItemUpdateRequest itemReq : request.getItems()) {
-                if (itemReq.getId() != null && existingById.containsKey(itemReq.getId())) {
-                    // Update existing item
-                    OrderItem existing = existingById.get(itemReq.getId());
-                    if (itemReq.getQuantity() == null || itemReq.getQuantity() <= 0) {
-                        // delete this item: stock should be restored by +existing.quantity
-                        stockDeltas.merge(existing.getProductId(), existing.getQuantity(), Integer::sum);
-                        // don't add to resultingItems
-                        changed = true;
-                        continue;
-                    }
-
-                    if (!existing.getQuantity().equals(itemReq.getQuantity())) {
-                        int qtyDiff = itemReq.getQuantity() - existing.getQuantity();
-                        // reduce stock by qtyDiff (can be negative to restore stock)
-                        stockDeltas.merge(existing.getProductId(), -qtyDiff, Integer::sum);
-                        existing.setQuantity(itemReq.getQuantity());
-                        changed = true;
-                    }
-                    resultingItems.add(existing);
-                } else {
-                    // New item to add
-                    if (itemReq.getProductId() == null || itemReq.getQuantity() == null || itemReq.getQuantity() <= 0) {
-                        // ignore invalid
-                        continue;
-                    }
-                    Product product = productRepository.findById(itemReq.getProductId())
-                            .orElseThrow(() -> ResourceNotFoundException.forResource("Product", itemReq.getProductId()));
-
-                    // validate stock
-                    if (product.getStockQuantity() < itemReq.getQuantity()) {
-                        throw new IllegalArgumentException("Insufficient stock for product: " + product.getName());
-                    }
-
-                    OrderItem newItem = OrderItem.fromProduct(product, itemReq.getQuantity());
-                    newItem.setOrderId(id);
-                    // will be saved below
-                    resultingItems.add(newItem);
-                    // reduce stock by quantity
-                    stockDeltas.merge(product.getId(), -itemReq.getQuantity(), Integer::sum);
-                    changed = true;
-                }
-            }
-
-            // Apply stock deltas
-            for (java.util.Map.Entry<UUID, Integer> e : stockDeltas.entrySet()) {
-                UUID pid = e.getKey();
-                int delta = e.getValue();
-                if (delta == 0) continue;
-                productRepository.updateStock(pid, delta);
-            }
-
-            // Persist item changes: delete all existing and re-insert resultingItems for simplicity
-            orderItemRepository.deleteByOrderId(id);
-            for (OrderItem item : resultingItems) {
-                item.setOrderId(id);
-                OrderItem saved = orderItemRepository.save(item);
-                // update id if needed
-                item.setId(saved.getId());
-            }
-
-            // attach items to order
-            order.setOrderItems(resultingItems);
-
-            // Recalculate subtotal/total with shipping
-            BigDecimal newSubtotal = resultingItems.stream()
-                    .map(OrderItem::getTotalPrice)
-                    .reduce(BigDecimal.ZERO, BigDecimal::add);
-            order.setSubtotal(newSubtotal);
-            
-            // Calculate total with shipping cost
-            BigDecimal shippingCost = BigDecimal.ZERO;
-            if (order.getShippingMethodId() != null) {
-                ShippingMethod shippingMethod = shippingMethodRepository.findById(order.getShippingMethodId()).orElse(null);
-                if (shippingMethod != null && shippingMethod.getPrice() != null) {
-                    shippingCost = shippingMethod.getPrice();
-                }
-            }
-            order.setTotal(newSubtotal.add(shippingCost));
-        }
-
-        // Recalculate total if shipping method changed but items didn't
-        if (changed && request.getItems() == null && request.getShippingMethodId() != null && 
-            !request.getShippingMethodId().equals(order.getShippingMethodId())) {
-            // Load current order items to get subtotal
-            List<OrderItem> currentItems = orderItemRepository.findByOrderId(id);
-            BigDecimal currentSubtotal = currentItems.stream()
-                    .map(OrderItem::getTotalPrice)
-                    .reduce(BigDecimal.ZERO, BigDecimal::add);
-            
-            // Calculate new shipping cost
-            BigDecimal newShippingCost = BigDecimal.ZERO;
-            ShippingMethod newShippingMethod = shippingMethodRepository.findById(request.getShippingMethodId()).orElse(null);
-            if (newShippingMethod != null && newShippingMethod.getPrice() != null) {
-                newShippingCost = newShippingMethod.getPrice();
-            }
-            
-            order.setSubtotal(currentSubtotal);
-            order.setTotal(currentSubtotal.add(newShippingCost));
-        }
-
-        if (!changed) {
-            log.debug("No changes detected for order {}", id);
-            return mapToResponseWithDetails(order);
-        }
-
-        // Persist order changes
-        orderRepository.update(order);
-
-        // Refresh and prepare response
-        CustomerOrder updated = orderRepository.findById(id)
-                .orElseThrow(() -> ResourceNotFoundException.forResource("Order", id));
-
-        OrderResponse response = mapToResponseWithDetails(updated);
-
-        // Update caches
-        Cache byIdCache = cacheManager.getCache(ORDERS_CACHE);
-        if (byIdCache != null) {
-            byIdCache.put("id:" + id, response);
-        }
-        Cache byNumberCache = cacheManager.getCache(ORDERS_CACHE);
-        if (byNumberCache != null && orderNumber != null) {
-            byNumberCache.put("number:" + orderNumber, response);
-        }
-
-        // Clear list cache
-        evictCache(ORDERS_CACHE);
-
-        log.info("Order {} updated successfully", id);
-        return response;
     }
 }
