@@ -11,21 +11,33 @@ import com.miracle.smart_ecommerce_jpa.exception.ResourceNotFoundException;
 import com.miracle.smart_ecommerce_jpa.domain.user.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.cache.Cache;
-import org.springframework.cache.CacheManager;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.CachePut;
+import org.springframework.cache.annotation.Caching;
 import org.springframework.cache.annotation.Cacheable;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import static com.miracle.smart_ecommerce_jpa.config.CacheConfig.*;
 
 /**
- * Implementation of UserService using raw JDBC.
+ * Implementation of UserService using Spring Data JPA.
+ *
+ * Transaction strategy:
+ * - Read operations use readOnly = true for performance optimization
+ * - Write operations use default REQUIRED propagation
+ * - @Modifying queries (setActiveStatus) run within the same transaction
+ *
+ * Cache strategy:
+ * - Users cached by ID and email for fast lookup
+ * - All entries evicted on delete, activate, deactivate, and update
+ *   to avoid stale data especially when email changes
  */
 @Service
 @RequiredArgsConstructor
@@ -33,40 +45,29 @@ import static com.miracle.smart_ecommerce_jpa.config.CacheConfig.*;
 public class UserServiceImpl implements UserService {
 
     private final UserRepository userRepository;
-    private final CacheManager cacheManager;
     private final PasswordEncoder passwordEncoder;
 
+    /**
+     * Create a new user.
+     * Checks for duplicate email before saving.
+     * Password is hashed before persistence.
+     * Result is cached by ID and email after creation.
+     */
     @Override
     @Transactional
+    @Caching(put = {
+            @CachePut(value = USERS_CACHE, key = "'id:' + #result.id"),
+            @CachePut(value = USERS_CACHE, key = "'email:' + #result.emailAddress")
+    })
     public UserResponse createUser(CreateUserRequest request) {
         log.info("Creating user with email: {}", request.getEmailAddress());
 
-        // Debug logging
-        log.debug("CreateUserRequest details - email: {}, firstName: {}, lastName: {}, phoneNumber: {}, password provided: {}",
-            request.getEmailAddress(),
-            request.getFirstName(),
-            request.getLastName(),
-            request.getPhoneNumber(),
-            request.getPassword() != null && !request.getPassword().isEmpty());
-
-        // Validate password is not null
         if (request.getPassword() == null || request.getPassword().trim().isEmpty()) {
-            log.error("Password validation failed - password is null or empty");
             throw new IllegalArgumentException("Password cannot be null or empty");
         }
 
-        // Check if email already exists
-        if (userRepository.existsByEmail(request.getEmailAddress())) {
+        if (userRepository.existsByEmailAddress(request.getEmailAddress())) {
             throw new DuplicateResourceException("User", "email", request.getEmailAddress());
-        }
-
-        String hashedPassword = hashPassword(request.getPassword());
-        log.debug("Password hashed successfully, length: {}", hashedPassword.length());
-
-        // Verify hashedPassword is not null before building user
-        if (hashedPassword == null) {
-            log.error("Hashed password is null after hashing!");
-            throw new IllegalStateException("Password hashing failed - result is null");
         }
 
         User user = User.builder()
@@ -74,31 +75,20 @@ public class UserServiceImpl implements UserService {
                 .firstName(request.getFirstName())
                 .lastName(request.getLastName())
                 .phoneNumber(request.getPhoneNumber())
-                .passwordHash(hashedPassword)
+                .passwordHash(hashPassword(request.getPassword()))
                 .isActive(true)
                 .role(request.getRole())
                 .build();
 
-
-        // Verify user object before saving
-        log.debug("User object before save - passwordHash is null: {}, isActive: {}",
-            user.getPasswordHash() == null,
-            user.getIsActive());
-
-        User savedUser = userRepository.save(user);
-        log.info("User created successfully with ID: {}", savedUser.getId());
-
-        UserResponse response = mapToResponse(savedUser);
-
-        Cache cache = cacheManager.getCache(USERS_CACHE);
-        if (cache != null) {
-            cache.put("id:" + savedUser.getId(), response);
-            cache.put("email:" + savedUser.getEmailAddress(), response);
-        }
-
-        return response;
+        User saved = userRepository.save(user);
+        log.info("User created successfully with ID: {}", saved.getId());
+        return mapToResponse(saved);
     }
 
+    /**
+     * Get user by ID.
+     * Result is cached by ID to avoid repeated DB lookups.
+     */
     @Override
     @Transactional(readOnly = true)
     @Cacheable(value = USERS_CACHE, key = "'id:' + #id")
@@ -109,153 +99,150 @@ public class UserServiceImpl implements UserService {
         return mapToResponse(user);
     }
 
+    /**
+     * Get user by email address.
+     * Result is cached by email to avoid repeated DB lookups.
+     */
     @Override
     @Transactional(readOnly = true)
     @Cacheable(value = USERS_CACHE, key = "'email:' + #email")
     public UserResponse getUserByEmail(String email) {
         log.debug("Getting user by email: {}", email);
-        User user = userRepository.findByEmail(email)
+        User user = userRepository.findByEmailAddress(email)
                 .orElseThrow(() -> new ResourceNotFoundException("User", "email", email));
         return mapToResponse(user);
     }
 
+    /**
+     * Get all users with pagination and sorting.
+     * Not cached due to dynamic nature of pageable parameters.
+     */
     @Override
     @Transactional(readOnly = true)
-    public PageResponse<UserResponse> getAllUsers(int page, int size) {
-        log.debug("Getting all users - page: {}, size: {}", page, size);
-        List<User> users = userRepository.findAll(page, size);
-        long total = userRepository.count();
+    public PageResponse<UserResponse> getAllUsers(Pageable pageable) {
+        log.debug("Getting all users - pageable: {}", pageable);
 
-        List<UserResponse> responses = users.stream()
+        Page<User> userPage = userRepository.findAll(pageable);
+
+        List<UserResponse> responses = userPage.getContent().stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
 
-        return PageResponse.of(responses, page, size, total);
+        return PageResponse.of(responses, pageable.getPageNumber(), pageable.getPageSize(), userPage.getTotalElements());
     }
 
+    /**
+     * Search users by keyword across first name, last name, and email with pagination.
+     * Not cached due to dynamic nature of keyword and pageable parameters.
+     */
     @Override
     @Transactional(readOnly = true)
-    public PageResponse<UserResponse> searchUsers(String keyword, int page, int size) {
-        log.debug("Searching users with keyword: {} - page: {}, size: {}", keyword, page, size);
-        List<User> users = userRepository.search(keyword, page, size);
+    public PageResponse<UserResponse> searchUsers(String keyword, Pageable pageable) {
+        log.debug("Searching users with keyword: {}", keyword);
 
-        // FIXED: Count only users matching the keyword, not all users
-        long total = userRepository.countByKeyword(keyword);
+        Page<User> userPage = userRepository.search(keyword, pageable);
 
-        List<UserResponse> responses = users.stream()
+        List<UserResponse> responses = userPage.getContent().stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
 
-        return PageResponse.of(responses, page, size, total);
+        return PageResponse.of(responses, pageable.getPageNumber(), pageable.getPageSize(), userPage.getTotalElements());
     }
 
+    /**
+     * Update an existing user.
+     * Uses JPA dirty checking — no explicit save() needed after field mutation.
+     * All cache entries evicted to handle email key changes cleanly.
+     */
     @Override
     @Transactional
+    @CacheEvict(value = USERS_CACHE, allEntries = true)
     public UserResponse updateUser(UUID id, UpdateUserRequest request) {
         log.info("Updating user with ID: {}", id);
-
-        User existingUser = userRepository.findById(id)
-                .orElseThrow(() -> ResourceNotFoundException.forResource("User", id));
-
-        String oldEmail = existingUser.getEmailAddress();
-
-        // Check if email is being changed to an existing one
-        if (!existingUser.getEmailAddress().equals(request.getEmailAddress())
-                && userRepository.existsByEmail(request.getEmailAddress())) {
-            throw new DuplicateResourceException("User", "email", request.getEmailAddress());
-        }
-
-        existingUser.setEmailAddress(request.getEmailAddress());
-        existingUser.setFirstName(request.getFirstName());
-        existingUser.setLastName(request.getLastName());
-        existingUser.setPhoneNumber(request.getPhoneNumber());
-        // Update role only if provided
-        if (request.getRole() != null) {
-            existingUser.setRole(request.getRole());
-        }
-
-        // Password updates are not allowed via UpdateUserRequest
-
-        User updatedUser = userRepository.update(existingUser);
-        log.info("User updated successfully: {}", id);
-
-        UserResponse response = mapToResponse(updatedUser);
-
-        // Update cache - both id and email keys
-        Cache cache = cacheManager.getCache(USERS_CACHE);
-        if (cache != null) {
-            // Evict old email key if changed
-            if (!oldEmail.equals(updatedUser.getEmailAddress())) {
-                cache.evict("email:" + oldEmail);
-            }
-            // Put updated data under both keys
-            cache.put("id:" + id, response);
-            cache.put("email:" + updatedUser.getEmailAddress(), response);
-        }
-
-        return response;
-    }
-
-
-    @Override
-    @Transactional
-    public void deleteUser(UUID id) {
-        log.info("Deleting user with ID: {}", id);
 
         User user = userRepository.findById(id)
                 .orElseThrow(() -> ResourceNotFoundException.forResource("User", id));
 
-        userRepository.deleteById(id);
-        log.info("User deleted successfully: {}", id);
-
-        // Evict from cache (both id and email keys)
-        Cache cache = cacheManager.getCache(USERS_CACHE);
-        if (cache != null) {
-            cache.evict("id:" + id);
-            cache.evict("email:" + user.getEmailAddress());
+        // Check if email is being changed to one already in use
+        if (!user.getEmailAddress().equals(request.getEmailAddress())
+                && userRepository.existsByEmailAddress(request.getEmailAddress())) {
+            throw new DuplicateResourceException("User", "email", request.getEmailAddress());
         }
+
+        user.setEmailAddress(request.getEmailAddress());
+        user.setFirstName(request.getFirstName());
+        user.setLastName(request.getLastName());
+        user.setPhoneNumber(request.getPhoneNumber());
+        if (request.getRole() != null) {
+            user.setRole(request.getRole());
+        }
+
+        log.info("User updated successfully: {}", id);
+        return mapToResponse(user);
     }
 
+    /**
+     * Delete a user by ID.
+     * All cache entries evicted after deletion.
+     */
     @Override
     @Transactional
+    @CacheEvict(value = USERS_CACHE, allEntries = true)
+    public void deleteUser(UUID id) {
+        log.info("Deleting user with ID: {}", id);
+        User user = userRepository.findById(id)
+                .orElseThrow(() -> ResourceNotFoundException.forResource("User", id));
+        userRepository.delete(user);
+        log.info("User deleted successfully: {}", id);
+    }
+
+    /**
+     * Activate a user account.
+     * Uses existsById to avoid loading the full entity unnecessarily.
+     */
+    @Override
+    @Transactional
+    @CacheEvict(value = USERS_CACHE, allEntries = true)
     public void activateUser(UUID id) {
         log.info("Activating user with ID: {}", id);
-        userRepository.setActiveStatus(id, true);
-
-        // Evict cache - user status changed
-        Cache cache = cacheManager.getCache(USERS_CACHE);
-        if (cache != null) {
-            cache.evict("id:" + id);
-            // Get user to evict email cache too
-            userRepository.findById(id).ifPresent(user ->
-                cache.evict("email:" + user.getEmailAddress())
-            );
+        if (!userRepository.existsById(id)) {
+            throw ResourceNotFoundException.forResource("User", id);
         }
+        userRepository.setActiveStatus(id, true);
+        log.info("User activated successfully: {}", id);
     }
 
+    /**
+     * Deactivate a user account.
+     * Uses existsById to avoid loading the full entity unnecessarily.
+     */
     @Override
     @Transactional
+    @CacheEvict(value = USERS_CACHE, allEntries = true)
     public void deactivateUser(UUID id) {
         log.info("Deactivating user with ID: {}", id);
-        userRepository.setActiveStatus(id, false);
-
-        // Evict cache - user status changed
-        Cache cache = cacheManager.getCache(USERS_CACHE);
-        if (cache != null) {
-            cache.evict("id:" + id);
-            // Get user to evict email cache too
-            userRepository.findById(id).ifPresent(user ->
-                cache.evict("email:" + user.getEmailAddress())
-            );
+        if (!userRepository.existsById(id)) {
+            throw ResourceNotFoundException.forResource("User", id);
         }
+        userRepository.setActiveStatus(id, false);
+        log.info("User deactivated successfully: {}", id);
     }
 
+    /**
+     * Count total users.
+     */
     @Override
     @Transactional(readOnly = true)
     public long countUsers() {
         return userRepository.count();
     }
 
+    /**
+     * Verify a raw password against a stored hashed password.
+     */
+    public boolean verifyPassword(String rawPassword, String hashedPassword) {
+        return passwordEncoder.matches(rawPassword, hashedPassword);
+    }
 
     // ========================================================================
     // Helper Methods
@@ -279,15 +266,6 @@ public class UserServiceImpl implements UserService {
         if (password == null || password.isEmpty()) {
             throw new IllegalArgumentException("Password cannot be null or empty for hashing");
         }
-        log.debug("Hashing password with BCrypt");
         return passwordEncoder.encode(password);
-    }
-
-
-    /**
-     * Verify a password against a hashed password
-     */
-    public boolean verifyPassword(String rawPassword, String hashedPassword) {
-        return passwordEncoder.matches(rawPassword, hashedPassword);
     }
 }
